option('enable-tracing', type: 'boolean', value: false)
option('enable-profiling', type: 'boolean', value: false)

option('with-ui', type: 'boolean')
option('with-webkit', type: 'boolean')
option('with-help', type: 'boolean')
option('with-examples', type: 'boolean', value: false)
option('with-tests', type: 'boolean')

option('with-manual', type: 'boolean', value: false)
option('with-gtkdoc', type: 'boolean', value: false)
option('with-valadoc', type: 'boolean', value: false)
