if get_option('with-ui')

icondir = join_paths(get_option('datadir'), 'icons/hicolor')

install_subdir('hicolor/16x16',
  install_dir: icondir,
)

install_subdir('hicolor/24x24',
  install_dir: icondir,
)

install_subdir('hicolor/32x32',
  install_dir: icondir,
)

install_subdir('hicolor/48x48',
  install_dir: icondir,
)

install_subdir('hicolor/256x256',
  install_dir: icondir,
)

install_subdir('hicolor/512x512',
  install_dir: icondir,
)

endif
