#uidir = $(ui_dir)
uidir = $(datarootdir)/@PACKAGE@/ui
uifiles = \
	about_dialog.ui \
	brabender_control.ui\
	chart_dialog.ui \
	chart_widget.ui \
	export_dialog.ui \
	heidolph_control.ui \
	licor_control.ui \
	log_dialog.ui \
	main_window.ui \
	parker_control.ui \
	parker_settings.ui \
	pid_dialog.ui \
	pid2_dialog.ui \
	plot_window.ui \
	serial_port_settings_box.ui \
	settings_dialog.ui \
	velmex_control.ui \
	view_dio.ui \
	velmex_settings_box.ui \
	style.css
ui_DATA = $(uifiles)

EXTRA_DIST = \
	$(uifiles)
